--- a/_posts/2015-03-17-locals.md
+++ b/_posts/2015-03-17-locals.md
@@ -10,7 +10,7 @@ Locals are good for storing variables for the __CURRENT__ request/response cycle
 These variables are store in [Response]({{ site.coreurl }}/src/main/java/ro/pippo/core/Response.java) and will be available automatically to all templates for the current request/response cycle.
 
 ```java
-GET("/contact/{id}", (routeContext) -> {
+GET("/contact/{id}", routeContext -> {
     /*
     // variant 1 (with model)
     Map<String, Object> model = new HashMap<>();
@@ -33,14 +33,10 @@ Another scenario for locals:
 
 ```java
 // filter that injects 'contacts' in locals and implicit in all templates
-ALL("/contact.*", (routeContext) -> {
-    routeContext.setLocal("contacts", contactService.getContacts());
-});
+ALL("/contact.*", routeContext -> routeContext.setLocal("contacts", contactService.getContacts()));
 
 // just consume 'contacts' in template 
-GET("/contacts", (routeContext) -> {
-    routeContext.render("crud/contacts");
-});
+GET("/contacts", routeContext -> routeContext.render("crud/contacts"));
 ```
 
 The snippet for contacts template (freemarker engine) shows a list with all contacts' name:
