--- a/_posts/2015-03-17-security.md
+++ b/_posts/2015-03-17-security.md
@@ -14,7 +14,7 @@ I will show you a simple implementation for a security filter.
 
 ```java
 // authentication filter
-GET("/contact.*", (routeContext) -> {
+GET("/contact.*", routeContext -> {
 	if (routeContext.getSession("username") == null) {
 		routeContext.setSession("originalDestination", routeContext.getRequest().getContextUriWithQuery());
 		routeContext.redirect("/login");
@@ -24,10 +24,10 @@ GET("/contact.*", (routeContext) -> {
 });
 
 // show contacts page
-GET("/contacts", (routeContext) -> routeContext.render("contacts"));
+GET("/contacts", routeContext -> routeContext.render("contacts"));
 
 // show contact page for the contact with id specified as path parameter
-GET("/contact/{id}", (routeContext) -> {
+GET("/contact/{id}", routeContext -> {
 	int id = routeContext.getParameter("id").toInt(0);
 	Contact contact = (id > 0) ? contactService.getContact(id) : new Contact();
     routeContext.setLocal("contact", contact);
@@ -36,12 +36,10 @@ GET("/contact/{id}", (routeContext) -> {
 });
 
 // show login page
-GET("/login", (routeContext) -> {
-    response.render("login");
-});
+GET("/login", routeContext -> response.render("login"));
 
 // process login submit
-POST("/login", (routeContext) -> {
+POST("/login", routeContext -> {
 	String username = routeContext.getParameter("username").toString();
 	String password = routeContext.getParameter("password").toString();
 	if (authenticate(username, password)) {
