--- a/_posts/2015-03-17-upload.md
+++ b/_posts/2015-03-17-upload.md
@@ -18,9 +18,9 @@ public static void main(String[] args) {
     application.setUploadLocation("upload");
     application.setMaximumUploadSize(100 * 1024); // 100k
 
-    application.GET("/", (routeContext) -> routeContext.render("upload"));
+    application.GET("/", routeContext -> routeContext.render("upload"));
 
-    application.POST("/upload", (routeContext) -> {
+    application.POST("/upload", routeContext -> {
         // retrieves the value for 'file' input
         FileItem file = routeContext.getRequest().getFile("file");
         try {
