--- a/_posts/2015-03-27-flash.md
+++ b/_posts/2015-03-27-flash.md
@@ -21,7 +21,7 @@ From technical perspective, Flash it's an attribute of session (`Session.getFlas
 Bellow you see a snipet code that put an error message in Flash object:
 
 ```java
-POST("/login", (routeContext) -> {
+POST("/login", routeContext -> {
 	String username = routeContext.getParameter("username").toString();
 	String password = routeContext.getParameter("password").toString();
 	if (authenticate(username, password)) {
@@ -35,7 +35,7 @@ POST("/login", (routeContext) -> {
 	}
 });
 
-GET("/login", (routeContext) -> {
+GET("/login", routeContext -> {
 	// we already have the flash object in the template model (injected by framework via Response.locals)
 	routeContext.render("login");
 });
@@ -68,7 +68,7 @@ On each request the `RouteDispatcher` removes the Flash instance from the sessio
 Are situation when we want to put a flash message directly in incoming (see ValidationApplication.java from pippo-demo-validation project). For these situations we can use:
 
 ```java
-POST("/", (routeContext) -> {
+POST("/", routeContext -> {
 	Contact contact = routeContext.createEntityFromParameters(Contact.class);
 
 	// check for validation
