--- a/_posts/2015-03-27-session.md
+++ b/_posts/2015-03-27-session.md
@@ -13,7 +13,7 @@ See below a snipet code about how to work with session in Pippo:
 
 ```java
 // authentication filter
-GET("/contact.*", (routeContext) -> {
+GET("/contact.*", routeContext -> {
 	if (routeContext.getSession("username") == null) {
 		routeContext.setSession("originalDestination", routeContext.getRequest().getContextUriWithQuery());	
 		routeContext.redirect("/login");
@@ -23,7 +23,7 @@ GET("/contact.*", (routeContext) -> {
 });
 
 // process login submit
-POST("/login", (routeContext) -> {
+POST("/login", routeContext -> {
 	String username = routeContext.getParameter("username").toString();
 	String password = routeContext.getParameter("password").toString();
 	if (authenticate(username, password)) {
