--- a/_posts/2015-05-05-routes.md
+++ b/_posts/2015-05-05-routes.md
@@ -22,7 +22,7 @@ GET("/", new RouteHandler() {
 
 // or more concise using Java 8 lambdas
 
-GET("/", (routeContext) -> routeContext.send("Hello World"));
+GET("/", routeContext -> routeContext.send("Hello World"));
 ```
 
 Routes in Pippo are created using methods named after HTTP verbs. For instance, in the previous example, we created a route to handle GET requests to the root of the website. You have a corresponding method in Application for all commonly used HTTP verbs (GET, POST, DELETE, HEAD, PUT). For a basic website, only GET and POST are likely to be used.
@@ -40,7 +40,7 @@ As you can see, it's easy to create routes with parameters. A parameter is wrapp
 You can retrieve the path parameter value for a request in type safe mode using:
 
 ```java
-GET("/contact/{id}", (routeContext) -> {
+GET("/contact/{id}", routeContext -> {
     int id = routeContext.getParameter("id").toInt(0);
     String action = routeContext.getParameter("action").toString("new");
 
@@ -51,10 +51,10 @@ GET("/contact/{id}", (routeContext) -> {
 });
 ```
 
-If you want to be more riguros you can use something like:
+If you want to be more rigorous you can use something like:
 
 ```java
-GET("/contact/{id: [0-9]+}", (routeContext) -> { ... });
+GET("/contact/{id: [0-9]+}", routeContext -> ... );
 ```
 
 #### Named routes
@@ -62,7 +62,7 @@ GET("/contact/{id: [0-9]+}", (routeContext) -> { ... });
 `Named` routes make referring to routes when generating redirects or URLs more convenient. You may specify a name for a route like so:
 
 ```java
-GET("/blogs/{year}/{month}/{day}/{title}", (routeContext) -> { routeContext.render("myTemplate")}).named("blog");
+GET("/blogs/{year}/{month}/{day}/{title}", routeContext -> routeContext.render("myTemplate")).named("blog");
 ```
 
 Now, you may use the route's name when generating URLs or redirects:
@@ -85,19 +85,19 @@ The examples below assume you have a `ContentTypeEngine` registered for JSON, XM
 //      /contact/54.json
 //      /contact/54.xml
 //      /contact/54.yaml
-GET("/contact/{id: [0-9]+}(\\.(json|xml|yaml))?", (ctx) -> ctx.send(contact));
+GET("/contact/{id: [0-9]+}(\\.(json|xml|yaml))?", routeContext -> routeContext.send(contact));
 
 // Register a route that requires a content-type suffix
 // e.g. /contact/54.json
 //      /contact/54.xml
 //      /contact/54.yaml
-GET("/contact/{id: [0-9]+}(\\.(json|xml|yaml))", (ctx) -> ctx.send(contact));
+GET("/contact/{id: [0-9]+}(\\.(json|xml|yaml))", routeContext -> routeContext.send(contact));
 
 // Register a route that requires a content-type suffix
 // e.g. /contact/john.json
 //      /contact/john.xml
 //      /contact/john.yaml
-GET("/contact/{id}(\\.(json|xml|yaml))", (ctx) -> ctx.send(contact));
+GET("/contact/{id}(\\.(json|xml|yaml))", routeContext -> routeContext.send(contact));
 ```
 
 **Note:**
@@ -124,10 +124,10 @@ public class UserRoutes extends RouteGroup {
         addBeforeFilters();
 
         // CRUD ROUTES
-        GET("/{id}", routeContext -> { ... }); // retrieve
-        POST("/", routeContext -> { ... }); // create
-        PUT("/{id}", routeContext -> { ... }); // update
-        DELETE("/{id}", routeContext -> { ... }); // delete
+        GET("/{id}", routeContext -> ... ); // retrieve
+        POST("/", routeContext -> ... ); // create
+        PUT("/{id}", routeContext -> ... ); // update
+        DELETE("/{id}", routeContext -> ... ); // delete
     }
 
 }
