--- a/_posts/2015-06-01-forms.md
+++ b/_posts/2015-06-01-forms.md
@@ -42,7 +42,7 @@ You may POST Arrays, Lists, or Sets to your `RouteHandler` implementations by us
 In this example, Pippo will automatically collect the values into a parameter named *rainbow*.  The *rainbow* parameter may be accessed and transformed to a collection of your choice.
 
 ```java
-POST("/rainbow", (routeContext) -> {
+POST("/rainbow", routeContext -> {
   List<String> rainbowList = routeContext.getParameter("rainbow").toList(String.class);
   Set<String> rainbowSet = routeContext.getParameter("rainbow").toSet(String.class);
   TreeSet<String> rainbowTreeSet = routeContext.getParameter("rainbow").toCollection(TreeSet.class, String.class);
@@ -72,7 +72,7 @@ Pippo supports overriding the `POST` method used to submit a form through the us
 Pippo will intercept the `_method` parameter specification and route the request to the `PATCH` handler that matches the URL pattern.
 
 ```java
-PATCH("/rainbow", (routeContext) -> {
+PATCH("/rainbow", routeContext -> {
   List<String> patched = routeContext.getParameter("rainbow").toList(String.class);
   List<String> rainbow = dao.getRainbow();
   for (int i = 0; i < patched.size(); i++) {
@@ -99,7 +99,7 @@ Pippo supports POSTing non-form content by specifying `_content_type` and `_cont
 ```
 
 ```java
-PUT("/rainbow", (routeContext) -> {
+PUT("/rainbow", routeContext -> {
   List<String> rainbow = routeContext.createEntityFromBody(List.class);
 });
 
