--- a/_posts/2015-06-18-filters.md
+++ b/_posts/2015-06-18-filters.md
@@ -12,7 +12,7 @@ For example we can create an `AuditFilter` (a __before filter__) with this code:
 
 ```java
 // audit filter
-ALL("/.*", (routeContext) -> {
+ALL("/.*", routeContext -> {
 	log.info("Request for {} '{}'", routeContext.getRequestMethod(), routeContext.getRequestUri());
 	routeContext.next();
 });
@@ -27,7 +27,7 @@ Another __before filter__ can be an `AuthenticationFilter`:
 
 ```java
 // authentication filter
-GET("/contact.*", (routeContext) {
+GET("/contact.*", routeContext {
 	if (routeContext.getSession("username") == null) {
 		routeContext.redirect("/login");
 	} else {
@@ -44,19 +44,19 @@ throughout a request-response cycle:
 
 ```java
 // before filter that create a database instance
-ALL("/.*", (routeContext) -> {
+ALL("/.*", routeContext -> {
     routeContext.setLocal("database", getDatabase());
     routeContext.next();
 }); 
 
 // insert data in database
-POST("/{id}", (routeContext) -> {
+POST("/{id}", routeContext -> {
     Database database = routeContext.getLocal("database");
     database.insert(something); // this line can throws an error
 });
 
 // after filter that release the database instance
-ALL("/.*", (routeContext) -> {
+ALL("/.*", routeContext -> {
     Database database = routeContextremoveLocal("database");
     database.release();
 }).runAsFinally(); 
