--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -19,7 +19,7 @@ public class HelloWorld {
 
     public static void main(String[] args) {
         Pippo pippo = new Pippo();
-        pippo.GET("/", (routeContext) -> routeContext.send("Hello World!"));
+        pippo.GET("/", routeContext -> routeContext.send("Hello World!"));
         pippo.start();
     }
 
