--- a/_posts/2015-03-17-locals.md
+++ b/_posts/2015-03-17-locals.md
@@ -33,7 +33,7 @@ Another scenario for locals:
 
 ```java
 // filter that injects 'contacts' in locals and implicit in all templates
-ALL("/contact.*", routeContext -> routeContext.setLocal("contacts", contactService.getContacts()));
+ANY("/contact.*", routeContext -> routeContext.setLocal("contacts", contactService.getContacts()));
 
 // just consume 'contacts' in template 
 GET("/contacts", routeContext -> routeContext.render("crud/contacts"));
