--- a/_posts/2015-03-17-security.md
+++ b/_posts/2015-03-17-security.md
@@ -92,11 +92,11 @@ Pippo includes a simple CSRF handler which will automatically generate a CSRF to
 
 Using this handler is straight-forward.
 
-**1.** Add an `ALL` filter for the protected path expression with the `CSRFHandler`.
+**1.** Add an `ANY` filter for the protected path expression with the `CSRFHandler`.
 
 ```java
 // add a CSRF token generator and validator
-ALL("/books.*", new CSRFHandler());
+ANY("/books.*", new CSRFHandler());
 ```
 
 **2.** Add a `_csrf_token` / `${csrfToken}` hidden input value on all forms that are POSTed to this protected path expression
