--- a/_posts/2015-06-18-filters.md
+++ b/_posts/2015-06-18-filters.md
@@ -12,7 +12,7 @@ For example we can create an `AuditFilter` (a __before filter__) with this code:
 
 ```java
 // audit filter
-ALL("/.*", routeContext -> {
+ANY("/.*", routeContext -> {
     log.info("Request for {} '{}'", routeContext.getRequestMethod(), routeContext.getRequestUri());
     routeContext.next();
 });
@@ -44,7 +44,7 @@ throughout a request-response cycle:
 
 ```java
 // before filter that create a database instance
-ALL("/.*", routeContext -> {
+ANY("/.*", routeContext -> {
     routeContext.setLocal("database", getDatabase());
     routeContext.next();
 }); 
@@ -56,7 +56,7 @@ POST("/{id}", routeContext -> {
 });
 
 // after filter that release the database instance
-ALL("/.*", routeContext -> {
+ANY("/.*", routeContext -> {
     Database database = routeContextremoveLocal("database");
     database.release();
 }).runAsFinally(); 
