--- a/_posts/2015-03-17-security.md
+++ b/_posts/2015-03-17-security.md
@@ -169,15 +169,15 @@ private static Config getPac4jConfig() {
 }
 ```
 
-Other solution is to define all settings related to PAC4J in your `application.properties` ant to use `SettingsConfigFactory` class:
+Other solution is to define all settings related to PAC4J in your `application.properties` and to use `SettingsConfigFactory` class:
 ```java
 Config config = new SettingsConfigFactory(getPippoSettings()).build();
 ```
 
 On `GET /login` route is rendered the login form. The form contains fields like username and password,  an a `POST /login` action.
 
-If you want to see a more complex example please see [pippo-demo-pac4j]({{ site.demourl }}/pippo-demo-basic) module.
-A possible integration with LDAP/AP is presented [here](https://groups.google.com/forum/#!topic/pac4j-users/uxXn-yPo4Rw).
+If you want to see a more complex example please see the [pippo-demo-pac4j]({{ site.demourl }}/pippo-demo-basic) module.  
+A possible integration with LDAP/AP is presented [here](https://groups.google.com/forum/#!topic/pac4j-users/uxXn-yPo4Rw).  
  
 #### Cross-Site Request Forgery (CSRF) Protection
 
