Improve metrics section; add prometheus page

--- a/_posts/2015-04-07-graphite.md
+++ b/_posts/2015-04-07-graphite.md
@@ -19,8 +19,10 @@ Add the following dependency to your application `pom.xml`.
 
 Add the following settings to your `application.properties`.
 
-    metrics.graphite.enabled = true
-    metrics.graphite.address = graphite.example.com
-    metrics.graphite.port = 2003
-    metrics.graphite.pickled = false
-    metrics.graphite.period = 60 seconds
+```properties
+metrics.graphite.enabled = true
+metrics.graphite.address = graphite.example.com
+metrics.graphite.port = 2003
+metrics.graphite.pickled = false
+metrics.graphite.period = 60 seconds
+```
