--- a/_posts/2015-04-07-metrics.md
+++ b/_posts/2015-04-07-metrics.md
@@ -10,10 +10,10 @@ Pippo provides optional integration with [Metrics](http://metrics.dropwizard.io/
 
 Pippo comes (out of the box) with some reporting backends:
 
-- [Ganglia](/mod/metrics/ganglia.html) `pippo-metrics-ganglia`
 - [Graphite](/mod/metrics/graphite.html) `pippo-metrics-graphite`
 - [InfluxDB](/mod/metrics/influxdb.html) `pippo-metrics-influxdb`
 - [Librato](/mod/metrics/librato.html) `pippo-metrics-librato`
+- [Prometheus](/mod/metrics/prometheus.html) `pippo-metrics-prometheus`
 
 #### Add the Pippo Metrics dependency
 
@@ -31,7 +31,6 @@ Now you are ready to start annotating your route handler methods or controller m
 
 You have several choices in the collection of metrics:
 
-- *Do nothing*
 - [Counted]({{ site.codeurl }}/pippo-metrics-parent/pippo-metrics/src/main/java/ro/pippo/metrics/Counted.java)
 A counter increments (and optionally decrements) when a method is executed.
 - [Metered]({{ site.codeurl }}/pippo-metrics-parent/pippo-metrics/src/main/java/ro/pippo/metrics/Metered.java)
@@ -42,6 +41,8 @@ A timer measures both the rate that a particular piece of code is called and the
 1. Start by sprinkling `@Counted`, `@Metered`, or `@Timed` on some of your controller methods.
 2. Start up VisualVM (and install the MBeans plugin) or JConsole.
 3. Browse your app and refresh the collected metrics.
+
+See below how to add a metric (meter) on a route handler 
 
 ```java
 GET("/", new RouteHandler() {
@@ -55,7 +56,42 @@ GET("/", new RouteHandler() {
 });
 ```
 
-Or a controller example:
+Other possible variants
+
+```java
+// metered route
+GET("/metered", new MeteredHandler("HelloWorld", routeContext -> routeContext.send("Metered !!!")));
+```
+
+```java
+GET("/", new RouteHandler() {
+
+    @Metered
+    @Override
+    public void handle(RouteContext routeContext) {
+        routeContext.send("Hello World");
+    }
+
+}).named("HelloWorld"); // <<< create a route with a name
+
+```
+in this case the metric name is the route name ("HelloWorld") because we have a named route and the metric name is missing for `@Metered` annotation.
+
+```java
+GET("/", new MyHandler());
+
+public class MyHandler implements RouteHandler {
+
+    @Metered
+    public void handle(RouteContext routeContext) {
+        routeContext.render("hello"); // render "hello" template
+    }
+
+}
+```
+in this case the metric name is "MyHandler.handle" (route handler class name and "handle" - method name)
+
+See below how to add a metric (time) in a controller
 
 ```java
 public class ContactsController extends Controller {
@@ -74,12 +110,16 @@ public class ContactsController extends Controller {
 
 You may optionally enable JVM-level details reporting by setting *metrics.jvm.enabled=true* in your `application.properties` file.
 
-    metrics.jvm.enabled = true
+```properties
+metrics.jvm.enabled = true
+```
 
 #### Reporting Metrics via MBeans for VisualVM, JConsole, or JMX
 
-If you want to expose your metrics to VisualVM, JConsole, or JMX you must enable the MBeans reporter in your `application.properties` file.
+If you want to expose your metrics to `VisualVM`, `JConsole`, or `JMX` you must enable the MBeans reporter in your `application.properties` file.
 
-    metrics.mbeans.enabled = true
+```properties
+metrics.mbeans.enabled = true
+```
 
-You can view the collected metrics using VisualVM (with the MBeans plugin installed) or using JConsole.
+You can view the collected metrics using `VisualVM` (with the MBeans plugin installed) or using `JConsole`.
