--- a/_posts/2015-04-07-influxdb.md
+++ b/_posts/2015-04-07-influxdb.md
@@ -19,10 +19,12 @@ Add the following dependency to your application `pom.xml`.
 
 Add the following settings to your `application.properties`.
 
-    metrics.influxdb.enabled = true
-    metrics.influxdb.address = localhost
-    metrics.influxdb.port = 8086
-    metrics.influxdb.database = mydb
-    metrics.influxdb.username = root
-    metrics.influxdb.password = root
-    metrics.influxdb.period = 60 seconds
+```properties
+metrics.influxdb.enabled = true
+metrics.influxdb.address = localhost
+metrics.influxdb.port = 8086
+metrics.influxdb.database = mydb
+metrics.influxdb.username = root
+metrics.influxdb.password = root
+metrics.influxdb.period = 60 seconds
+```
