--- a/_posts/2015-04-07-librato.md
+++ b/_posts/2015-04-07-librato.md
@@ -19,7 +19,9 @@ Add the following dependency to your application `pom.xml`.
 
 Add the following settings to your `application.properties`.
 
-    metrics.librato.enabled = true
-    metrics.librato.username = person@example.com
-    metrics.librato.apikey = 12345cafebabe
-    metrics.librato.period = 60 seconds
+```properties
+metrics.librato.enabled = true
+metrics.librato.username = person@example.com
+metrics.librato.apikey = 12345cafebabe
+metrics.librato.period = 60 seconds
+```
