Improve metrics section

--- a/_posts/2015-04-07-metrics.md
+++ b/_posts/2015-04-07-metrics.md
@@ -80,7 +80,7 @@ in this case the metric name is the route name ("HelloWorld") because we have a 
 ```java
 GET("/", new MyHandler());
 
-public class MyHandler implements RouteHandler {
+static class MyHandler implements RouteHandler {
 
     @Metered
     public void handle(RouteContext routeContext) {
@@ -89,7 +89,7 @@ public class MyHandler implements RouteHandler {
 
 }
 ```
-in this case the metric name is "MyHandler.handle" (route handler class name and "handle" - method name)
+in this case the metric name is "MyHandler.handle" (route handler class name and method name)
 
 See below how to add a metric (time) in a controller
 
@@ -103,6 +103,7 @@ public class ContactsController extends Controller {
 
 }
 ```
+in this case the metric name is "ContactsController.index" (controller class name and method name)
 
 #### Collecting Additional Metrics
 
