--- a/_posts/2015-04-03-groovy.md
+++ b/_posts/2015-04-03-groovy.md
@@ -11,11 +11,13 @@ date: 2015-04-03 16:35:07
 
 1) Add the pippo-groovy dependency to your pom.xml:
 
-    <dependency>
-        <groupId>ro.pippo</groupId>
-        <artifactId>pippo-groovy</artifactId>
-        <version>${pippo.version}</version>
-    </dependency>
+```xml
+<dependency>
+    <groupId>ro.pippo</groupId>
+    <artifactId>pippo-groovy</artifactId>
+    <version>${pippo.version}</version>
+</dependency>
+```
 
 2)  Start writing [Groovy MarkupTemplateEngine][groovy] templates in the `templates` folder of your application.  
 **Note:** The default file extension of a Groovy template is `.groovy` and may be ommitted from your Pippo Java code but <u>not</u> your templates.
@@ -28,11 +30,15 @@ This engine includes some useful Pippo integration features and conveniences lik
 
 You can access your translation resources using the i18n helper.
 
-    i18n("key.name")
+```
+i18n("key.name")
+```
 
 You can supply arguments to your *MessageFormat* translation resources too.
 
-    i18n("key.name", "arg1", "arg2")
+```
+i18n("key.name", "arg1", "arg2")
+```
 
 ##### prettytime (relative time)
 
@@ -40,24 +46,30 @@ pippo-groovy supports automatically localized [prettytime][prettytime] out-of-th
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
-    prettyTime(myDate)
+```
+prettyTime(myDate)
+```
 
 Will produce something like...
 
-    3 days ago
+```
+3 days ago
+```
 
 ##### formatTime
 
 You can also automatically format localized dates using standard Java date format patterns.
 
-    formatTime(now)}
-    formatTime(now, "short")
-    formatTime(now, "medium")
-    formatTime(now, "long")
-    formatTime(now, "full")
-    formatTime(now, "HH:mm")
-    formatTime(now, "dd-MM-yyyy HH:mm")
-    formatTime(now, "dd-MM-yyyy HH:mm")
+```
+formatTime(now)}
+formatTime(now, "short")
+formatTime(now, "medium")
+formatTime(now, "long")
+formatTime(now, "full")
+formatTime(now, "HH:mm")
+formatTime(now, "dd-MM-yyyy HH:mm")
+formatTime(now, "dd-MM-yyyy HH:mm")
+```
 
 ##### webjarsAt & publicAt
 
@@ -80,12 +92,13 @@ script(src: publicAt('js/main.js')) {}
 ```java
 public class MyApplication extends Application {
 
-	@Override
+    @Override
     protected void onInit() {
-		// add routes for static content
+        // add routes for static content
         addPublicResourceRoute();
         addWebjarsResourceRoute();    
-        ...
+        
+        // add other routes
     }
     
 }
@@ -103,7 +116,7 @@ The string passed to '`ng` will produce `{% raw %}{{something | or | other}}{% e
 
 ##### Error Templates
 
-pippo-groovy will render special templates for routing problems and excepions.  You may override these templates 
+pippo-groovy will render special templates for routing problems and exceptions.  You may override these templates 
 within your own application.
 
 - `templates/pippo/404notFound.groovy`
