--- a/_posts/2015-04-03-pebble.md
+++ b/_posts/2015-04-03-pebble.md
@@ -11,11 +11,13 @@ date: 2015-04-03 16:35:34
 
 1) Add the pippo-pebble dependency to your pom.xml:
 
-    <dependency>
-        <groupId>ro.pippo</groupId>
-        <artifactId>pippo-pebble</artifactId>
-        <version>${pippo.version}</version>
-    </dependency>
+```xml
+<dependency>
+    <groupId>ro.pippo</groupId>
+    <artifactId>pippo-pebble</artifactId>
+    <version>${pippo.version}</version>
+</dependency>
+```
 
 2)  Start writing [Pebble][pebble] templates in the `templates` folder of your application.  
 **Note:** The default file extension of a Pebble template is `.peb` and it has to be ommitted from your templates and your Pippo Java code. The default location (=base path) of the template files is `src/main/resources/templates`. If you use template inheritance or partial templates then you have to omit the base path! Currently the default extension of Pebble templates cannot be changed.
@@ -28,11 +30,15 @@ This engine includes some useful Pippo integration features and conveniences lik
 
 You can access your translation resources using the i18n helper.
 
-    {% raw %}{{ i18n('key.name') }}{% endraw %}
+```
+{% raw %}{{ i18n('key.name') }}{% endraw %}
+```
 
 You can supply arguments to your *MessageFormat* translation resources too.
 
-    {% raw %}{{ i18n('key.name', 'arg1', 'arg2') }}{% endraw %}
+```
+{% raw %}{{ i18n('key.name', 'arg1', 'arg2') }}{% endraw %}
+```
 
 ##### prettytime (relative time)
 
@@ -40,26 +46,32 @@ pippo-pebble supports automatically localized [prettytime][prettytime] out-of-th
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
-    {% raw %}
-    {{ myDate | prettyTime }}
-    {% endraw %}
+```
+{% raw %}
+{{ myDate | prettyTime }}
+{% endraw %}
+```
 
 Will produce something like...
 
-    3 days ago
+```
+3 days ago
+```
 
 ##### formatTime
 
 You can also automatically format localized dates using standard Java date format patterns.
 
-	{% raw %}
-	{{ myDate | formatTime('short') }}
-    {{ myDate | formatTime('medium') }}
-    {{ myDate | formatTime('long') }}
-    {{ myDate | formatTime('full') }}
-    {{ myDate | formatTime('HH:mm') }}
-    {{ myDate | formatTime('dd-MM-yyyy HH:mm') }}
-    {% endraw %}
+```
+{% raw %}
+{{ myDate | formatTime('short') }}
+{{ myDate | formatTime('medium') }}
+{{ myDate | formatTime('long') }}
+{{ myDate | formatTime('full') }}
+{{ myDate | formatTime('HH:mm') }}
+{{ myDate | formatTime('dd-MM-yyyy HH:mm') }}
+{% endraw %}
+```
 
 ##### webjarsAt & publicAt
 
@@ -84,12 +96,13 @@ pippo-pebble supports context-aware url generation for your classpath resources 
 ```java
 public class MyApplication extends Application {
 
-	@Override
+    @Override
     protected void onInit() {
-		// add routes for static content
+        // add routes for static content
         addPublicResourceRoute();
         addWebjarsResourceRoute();
-        ...
+        
+        // add other routes
     }
     
 }
@@ -101,9 +114,11 @@ Pebble and AngularJS both use the double-brace notation.
 
 pippo-pebble comes with out-of-the-box support for the following syntax:
 
-	{% raw %}
-	{{ng something | or | other}}
-	{% endraw %}
+```
+{% raw %}
+{{ng something | or | other}}
+{% endraw %}
+```
 
 Anything after the `ng` will be re-injected into the template during the compilation phase.
 
