--- a/_posts/2015-04-03-trimou.md
+++ b/_posts/2015-04-03-trimou.md
@@ -11,11 +11,13 @@ date: 2015-04-03 16:35:19
 
 1) Add the pippo-trimou dependency to your pom.xml:
 
-    <dependency>
-        <groupId>ro.pippo</groupId>
-        <artifactId>pippo-trimou</artifactId>
-        <version>${pippo.version}</version>
-    </dependency>
+```xml
+<dependency>
+    <groupId>ro.pippo</groupId>
+    <artifactId>pippo-trimou</artifactId>
+    <version>${pippo.version}</version>
+</dependency>
+```
 
 2)  Start writing [Mustache][mustache] templates in the `templates` folder of your application.  You may want to review the [Trimou docs](http://trimou.org/doc/latest.html) for any non-standard syntax notes.  
 **Note:** The default file extension of a Trimou template is `.mustache` and it may be ommitted from your templates and your Pippo Java code.
@@ -28,15 +30,19 @@ This engine includes some useful Pippo integration features and conveniences lik
 
 You can access your translation resources using the i18n helper.
 
-	{% raw %}
-	{{i18n "key.name"}}
-	{% endraw %}
+```
+{% raw %}
+{{i18n "key.name"}}
+{% endraw %}
+```
 
 You can supply arguments to your *MessageFormat* translation resources too.
 
-    {% raw %}
-    {{i18n "key.name" "arg1" "arg2"}}
-    {% endraw %}
+```
+{% raw %}
+{{i18n "key.name" "arg1" "arg2"}}
+{% endraw %}
+```
 
 ##### prettytime (relative time)
 
@@ -44,27 +50,33 @@ pippo-trimou supports automatically localized [prettytime][prettytime] out-of-th
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
-    {% raw %}
-    {{myDate.prettyTime}}
-    {% endraw %}
+```
+{% raw %}
+{{myDate.prettyTime}}
+{% endraw %}
+```
     
 Will produce something like...
 
-    3 days ago
+```
+3 days ago
+```
 
 ##### formatTime
 
 You can also automatically format localized dates using standard Java date format patterns.
 
-	{% raw %}
-    {{formatTime now}}
-    {{formatTime now style="short"}}
-    {{formatTime now style="medium"}}
-    {{formatTime now style="long"}}
-    {{formatTime now style="full"}}
-    {{formatTime now pattern="HH:mm"}}
-    {{formatTime now pattern="dd-MM-yyyy HH:mm"}}
-    {% endraw %}
+```
+{% raw %}
+{{formatTime now}}
+{{formatTime now style="short"}}
+{{formatTime now style="medium"}}
+{{formatTime now style="long"}}
+{{formatTime now style="full"}}
+{{formatTime now pattern="HH:mm"}}
+{{formatTime now pattern="dd-MM-yyyy HH:mm"}}
+{% endraw %}
+```
 
 ##### webjarsAt & publicAt
 
@@ -94,7 +106,8 @@ public class MyApplication extends Application {
 		// add routes for static content
         addPublicResourceRoute();
         addWebjarsResourceRoute();
-        ...
+        
+        // add other routes
     }
     
 }
@@ -106,9 +119,11 @@ Mustache and AngularJS both use the double-brace notation.  There are several op
 
 pippo-trimou comes with out-of-the-box support for the following syntax:
 
-    {% raw %}
-    {{ng something | or | other}}
-    {% endraw %}
+```
+{% raw %}
+{{ng something | or | other}}
+{% endraw %}
+```
 
 Anything after the `ng` will be re-injected into the template during the compilation phase.
 
