--- a/_posts/2015-04-03-jade.md
+++ b/_posts/2015-04-03-jade.md
@@ -11,11 +11,13 @@ date: 2015-04-03 15:56:02
 
 1) Add the pippo-jade dependency to your pom.xml:
 
-    <dependency>
-        <groupId>ro.pippo</groupId>
-        <artifactId>pippo-jade</artifactId>
-        <version>${pippo.version}</version>
-    </dependency>
+```xml
+<dependency>
+    <groupId>ro.pippo</groupId>
+    <artifactId>pippo-jade</artifactId>
+    <version>${pippo.version}</version>
+</dependency>
+```
 
 2)  Start writing [Jade][jade] templates in the `templates` folder of your application.  
 
@@ -29,11 +31,15 @@ This engine includes some useful Pippo integration features and conveniences lik
 
 You can access your translation resources using the i18n method.
 
-    pippo.i18n("key.name")
+```
+pippo.i18n("key.name")
+```
 
 You can supply arguments to your *MessageFormat* translation resources too.
 
-    pippo.i18n("key.name", "arg1", "arg2")
+```
+pippo.i18n("key.name", "arg1", "arg2")
+```
 
 ##### prettytime (relative time)
 
@@ -41,24 +47,30 @@ pippo-jade supports automatically localized [prettytime][prettytime] out-of-the-
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
-    pippo.prettyTime(myDate)
+```
+pippo.prettyTime(myDate)
+```
 
 Will produce something like...
 
-    3 days ago
+```
+3 days ago
+```
 
 ##### formatTime
 
 You can also automatically format localized dates using standard Java date format patterns.
 
-    pippo.formatTime(now)}
-    pippo.formatTime(now, "short")
-    pippo.formatTime(now, "medium")
-    pippo.formatTime(now, "long")
-    pippo.formatTime(now, "full")
-    pippo.formatTime(now, "HH:mm")
-    pippo.formatTime(now, "dd-MM-yyyy HH:mm")
-    pippo.formatTime(now, "dd-MM-yyyy HH:mm")
+```
+pippo.formatTime(now)}
+pippo.formatTime(now, "short")
+pippo.formatTime(now, "medium")
+pippo.formatTime(now, "long")
+pippo.formatTime(now, "full")
+pippo.formatTime(now, "HH:mm")
+pippo.formatTime(now, "dd-MM-yyyy HH:mm")
+pippo.formatTime(now, "dd-MM-yyyy HH:mm")
+```
 
 ##### webjarsAt & publicAt
 
@@ -81,9 +93,9 @@ script(src=pippo.publicAt('js/main.js'))
 ```java
 public class MyApplication extends Application {
 
-	@Override
+    @Override
     protected void onInit() {
-		// add routes for static content
+        // add routes for static content
         addPublicResourceRoute();
         addWebjarsResourceRoute();
         ...
